# goIt-python-web-08

./: config.ini  consumer.py  models.py  producer.py  pyproject.toml  search.py  seeds.py
